--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-# Deploy Duniya Rides travel website to GitHub Pages
+# Deploy Duniya Rides travel website to GitHub Pages - v2
 name: Deploy to GitHub Pages
 
 on:
